# localization_and_tracking

./: README.md
dataset/close_directional_light/depth/: frame_20170120T160750.900358_depth.tiff  frame_20170120T160751.000210_depth.tiff  frame_20170120T160751.039728_depth.tiff
dataset/close_directional_light/rgb/: frame_20170120T160750.900358_rgb.tiff  frame_20170120T160751.000210_rgb.tiff  frame_20170120T160751.039728_rgb.tiff
dataset/turtle/: turtle.ply  turtle_with_normals.ply
dataset_capture/: CMakeLists.txt  readme.md
dataset_capture/include/: dataset_capture.h
dataset_capture/source/: dataset_capture.cpp  main.cpp
template_alignment/: CMakeLists.txt
template_alignment/include/: template_alignment.h
template_alignment/source/: template_alignment.cpp
tiff_to_pcd/: CMakeLists.txt  readme.md
tiff_to_pcd/include/: tiff_to_pcd.h
tiff_to_pcd/source/: tiff_to_pcd.cpp
tracking/: CMakeLists.txt  readme.md
tracking/include/: openni_capture.h
tracking/source/: openni_tracking.cpp
